"Update demo component configuration, docs, and code"

--- a/content/components/demo.mdx
+++ b/content/components/demo.mdx
@@ -1,9 +1,8 @@
 export const metadata = {
   title: 'Demo',
-  description: 'demo component which will never use before',
+  description:
+    'Apple Vision Pro like Blur Effect, we can use it in images, video, card etc. lets make something great with this component',
 };
-
-> Read Docs to know more [Blur Vignette](https://expensive.toys/blog/blur-vignette)
 
 <ComponentCodePreview name='democomponent' />
 
